fix overlapping issue on index page

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,7 @@
 .footer {
   background-color: $color-primary-dark;
+  bottom: 0;
+
   .content {
     padding: 2% 0;
     display: flex;
@@ -9,8 +11,6 @@
       flex-direction: column;
     }
 
-    &__image {
-    }
     &__contact {
       font-weight: 300;
       display: flex;
@@ -25,12 +25,12 @@
         &:not(:last-child) {
           border-right: 1px solid rgba(255, 255, 255, 0.5);
           @include respond(phone-L) {
-            border: none;           
+            border: none;
           }
         }
         @include respond(phone-L) {
           border: none;
-          padding: 3rem 0;
+          padding: 2rem 0;
           text-align: center;
         }
       }
@@ -41,10 +41,7 @@
     text-align: center;
     font-weight: 300;
     font-size: 1.2rem;
-    padding-bottom: 1.5rem;
+    padding: 2rem 0;
     color: rgba(255, 255, 255, 0.733);
-    // @include respond(phone-L) {
-    //  padding-bottom: 0rem;
-    // }
   }
 }
